@@ -54,20 +54,19 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 660)
-(Parent-Version lpmud 3-3 659)
+(Project-Version lpmud 3-3 661)
+(Parent-Version lpmud 3-3 660)
 (Version-Log "
-  - (gcollect.c) The names of programs of destructed objects didn't
-       get their references cleared properly in a GC, leaking the
-       program names if the destructed object was held by
-       a self-reference (Bug #0000099).
-  - (closure.c) Determining the closure location leaked the
-       program's name (Bug  #0000347).
+  - (gcollect.c) When a program was swapped out, the GC didn't clear the refs
+       of its name (Bug #0000348).
+  - (mregex.c) If a regexp function was asked to use both RE_TRADITIONAL
+       and RE_PCRE, and the regexp doesn't compile for both, the resulting
+       error leaked some structures (Bug #0000349).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Mon, 17 Jan 2005 15:26:54 -0700")
+(Checkin-Time "Wed, 19 Jan 2005 22:23:38 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -105,7 +104,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.85 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.723 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.724 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385.1.11 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -168,7 +167,7 @@
   (src/array.h (lpmud/f/47_array.h 1.18.1.22 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.21 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.42 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.43 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.16 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.3 644))
@@ -190,7 +189,7 @@
   (src/files.c (lpmud/i/50_files.c 1.29 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.16 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.116.1.4 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.116.1.5 644))
   (src/hash.h (lpmud/f/32_hash.h 1.6 644))
   (src/hash.c (lpmud/c/28_hash.c 1.17 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -209,7 +208,7 @@
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
   (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.15 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.16 644))
-  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.42 644))
+  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.43 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.28 644))
   (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.33 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
